<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimens_8dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageViewMovies"
            android:layout_width="@dimen/dimens_120dp"
            android:layout_height="@dimen/dimens_200dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:src="@color/black" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewTitle"
            style="@style/Title"
            android:layout_width="@dimen/dimens_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_8dp"
            android:ellipsize="end"
            android:maxLines="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageViewMovies"
            app:layout_constraintTop_toTopOf="@+id/imageViewMovies"
            app:layout_constraintVertical_bias="0.0"
            tools:text="Avatar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewDate"
            style="@style/Text.Regular"
            android:layout_width="@dimen/dimens_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_8dp"
            android:layout_marginTop="@dimen/dimens_4dp"
            android:ellipsize="end"
            android:maxLines="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageViewMovies"
            app:layout_constraintTop_toBottomOf="@id/textViewTitle"
            app:layout_constraintVertical_bias="0.0"
            tools:text="Avatar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewRating"
            style="@style/Text.Regular"
            android:layout_width="@dimen/dimens_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_8dp"
            android:layout_marginTop="@dimen/dimens_4dp"
            android:ellipsize="end"
            android:maxLines="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageViewMovies"
            app:layout_constraintTop_toBottomOf="@id/textViewDate"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/rating_text" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewDuration"
            style="@style/Text.Regular"
            android:layout_width="@dimen/dimens_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_8dp"
            android:layout_marginTop="@dimen/dimens_4dp"
            android:ellipsize="end"
            android:maxLines="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageViewMovies"
            app:layout_constraintTop_toBottomOf="@id/textViewRating"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/duration_text" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewGenre"
            style="@style/Text.Regular"
            android:layout_width="@dimen/dimens_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_8dp"
            android:layout_marginTop="@dimen/dimens_4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageViewMovies"
            app:layout_constraintTop_toBottomOf="@id/textViewDuration"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/genres_text" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView1"
            style="@style/Title"
            android:layout_width="@dimen/dimens_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_8dp"
            android:text="@string/overview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imageViewMovies"
            app:layout_constraintTop_toBottomOf="@+id/imageViewMovies" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewOverview"
            style="@style/Text.Regular"
            android:layout_width="@dimen/dimens_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView1"
            app:layout_constraintTop_toBottomOf="@+id/textView1"
            tools:text="@string/overview" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView2"
            style="@style/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_12dp"
            android:text="@string/user_review"
            app:layout_constraintStart_toStartOf="@+id/textViewOverview"
            app:layout_constraintTop_toBottomOf="@+id/textViewOverview" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewSeeAllReview"
            style="@style/Text.Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_12dp"
            android:text="@string/see_all_review"
            android:textColor="@color/teal_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewOverview" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutReview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewEmptyReview"
                style="@style/Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_12dp"
                android:text="@string/no_user_review"
                android:visibility="gone" />

            <include
                android:id="@+id/itemReview"
                layout="@layout/item_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_4dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView3"
            style="@style/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_12dp"
            android:text="@string/trailer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutReview" />

        <include
            android:id="@+id/itemVideo"
            layout="@layout/item_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewEmptyVideo"
            style="@style/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_12dp"
            android:text="@string/no_trailer"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemVideo" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>